tests/ui/unsafe/unsafe-borrow.stderr
error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/unsafe-borrow.rs:9:13
   |
LL |     let a = &mut foo.0.0;
   |             ^^^^^^^^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/unsafe-borrow.rs:29:13
   |
LL |     let a = &mut foo.0[2];
   |             ^^^^^^^^^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/unsafe-borrow.rs:48:18
   |
LL |         NonZero((a,)) => *a = 0,
   |                  ^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0133`.
